update horizontal scrollbar issue on sm screens. Thanks u/Venetax

--- a/styles/global.css
+++ b/styles/global.css
@@ -91,6 +91,15 @@ a:hover {
   }
 }
 
+@media (max-width: 320px) {
+  .form {
+    width: 300px;
+  }
+  .a-contact {
+    font-size: 30px;
+  }
+}
+
 .form-label-group {
   position: relative;
   margin-bottom: 1rem;
